feat/fix: complete task
