# internal/domain/pull_request.go
@@ -7,6 +7,9 @@ import (
 
 var ErrPRIsExists = errors.New("PR id already exists")
 var ErrPRNotFound = errors.New("PR not found")
+var ErrPRMerged = errors.New("cannot reassign on merged PR")
+var ErrIsNotAssigned = errors.New("reviewer is not assigned to this PR")
+var ErrIsNoCandidates = errors.New("no active replacement candidate in team")
 
 type PRStatus string
 
@@ -26,4 +29,5 @@ type PullRequestAssignment struct {
 	PullRequest
 	AssignedReviewers []string
 	MergedAt          *time.Time
+	ReplacedBy        *string
 }
